Update novos patterns

--- a/simple_pipeline_using_pattern/simple_pipeline.conf
+++ b/simple_pipeline_using_pattern/simple_pipeline.conf
@@ -11,7 +11,7 @@ filter {
               # se foi utilizada a instalação por descompactação procure o diretório de instalação e crie
               # a o subdiretório chamado patterns.
               patterns_dir => ["/etc/logstash/patterns"]
-              match => ["message", "%{ZABBIX_TEMPLATE}", "%{COMMONAPACHELOG}", "%{COMBINEDAPACHELOG}"]
+              match => ["message", "%{ZABBIX_TEMPLATE}", "%{COMMONAPACHELOG}", "%{COMBINEDAPACHELOG}, %{SPRING_PATTERN}"]
               
         }
         
